--- a/src/app/user-options/update-user-info/update-user-info.component.scss
+++ b/src/app/user-options/update-user-info/update-user-info.component.scss
@@ -17,3 +17,9 @@
   padding-left: 36%;
 }
 
+.requirement {
+  padding-top: 0.5em;
+  color: orangered;
+  font-family: Arial, serif;
+  font-size: 9pt;
+}
