added view reports, minor changes

--- a/src/app/unipark-page/unipark-page.component.html
+++ b/src/app/unipark-page/unipark-page.component.html
@@ -27,6 +27,12 @@
         <mat-icon svgIcon="car-connected"></mat-icon>
         <span>Request Parking</span>
       </a>
+      <!-- View Requests -->
+      <a mat-button routerLink="./view-requests"
+          routerLinkActive="mat-accent">
+        <mat-icon svgIcon="car-connected"></mat-icon>
+        <span>View Requests</span>
+      </a>
       <!-- Infringements -->
       <a mat-button routerLink="./infringments"
           routerLinkActive="mat-accent">
