added functionality for view requests, cancel request

--- a/src/app/unipark-page/unipark-page.component.html
+++ b/src/app/unipark-page/unipark-page.component.html
@@ -11,7 +11,7 @@
       </a>
       <!-- Update User Info -->
       <a mat-button routerLink="./update-user-info"
-        routerLinkActive="color">
+        routerLinkActive="mat-accent">
         <mat-icon svgIcon="account-settings-variant"></mat-icon>
         <span>Update User Info</span>
       </a>
@@ -30,7 +30,7 @@
       <!-- View Requests -->
       <a mat-button routerLink="./view-requests"
           routerLinkActive="mat-accent">
-        <mat-icon svgIcon="car-connected"></mat-icon>
+        <mat-icon svgIcon="filter-variant"></mat-icon>
         <span>View Requests</span>
       </a>
       <!-- Infringements -->
