--- a/src/app/user-options/infringements/infringements.component.html
+++ b/src/app/user-options/infringements/infringements.component.html
@@ -21,6 +21,16 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
           <td mat-cell *matCellDef="let report"> {{report.Description}} </td>
         </ng-container>
+        <!-- Report Type Column -->
+        <ng-container matColumnDef="ReportType">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Report Type </th>
+          <td mat-cell *matCellDef="let report"> {{report.ReportType}} </td>
+        </ng-container>
+        <!-- Amount Column -->
+        <ng-container matColumnDef="Amount">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Amount </th>
+          <td mat-cell *matCellDef="let report"> R{{report.Amount}} </td>
+        </ng-container>
       
       <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
