--- a/src/app/user-options/request-parking/request-parking.component.html
+++ b/src/app/user-options/request-parking/request-parking.component.html
@@ -33,8 +33,8 @@
     </mat-dialog-content>
   </div>
   <br>
-  <div *ngIf="areaSelected" class="padding-map">
-    <app-map longitude={{longitude}} latitude={{latitude}}></app-map>
+  <div *ngIf="areaSelected && !markerEmpty" class="padding-map">
+    <app-map longitude={{longitude}} latitude={{latitude}} parkingArea={{selectedArea}}></app-map>
   </div>
   <hr>
   <div class="padding-buttons">
