--- a/src/app/user-options/update-user-info/update-user-info.component.html
+++ b/src/app/user-options/update-user-info/update-user-info.component.html
@@ -60,7 +60,7 @@
               *Minimum 2 Numbers.
           </div>
           <div *ngIf="!testMinSpecial()">
-              *Minimum 1 Specail Characters.
+              *Minimum 1 Special Characters.
           </div>
           <div *ngIf="newPass.value?.length < 10">
               *Minimum 10 Characters.
