fixed assign parking maps, minor additions

--- a/src/app/user-options/help/help.component.html
+++ b/src/app/user-options/help/help.component.html
@@ -1,7 +1,7 @@
 <div class="alternative">
   <!-- Display of help modal -->
   <!-- Displays help image -->
-  <img src="assets/images/user-options/update-info/update-info.png" alt="User Info">
+  <img class="padding-image" src="assets/images/user-options/help/help.png" alt="HELP">
   <hr>
   <p>
     
