--- a/src/app/user-options/infringements/infringements.component.html
+++ b/src/app/user-options/infringements/infringements.component.html
@@ -1,7 +1,7 @@
 <div class="alternative center">
   <!-- Display of login modal -->
   <!-- Displays user info image -->
-  <img src="assets/images/user-options/infringements/infringements.png" alt="Infringements.png">
+  <img class="padding-image" src="assets/images/user-options/infringements/infringements.png" alt="Infringements.png">
   <hr>
   <mat-dialog-content>
     <!-- Filter table input-->
