--- a/src/app/user-options/update-user-info/update-user-info.component.scss
+++ b/src/app/user-options/update-user-info/update-user-info.component.scss
@@ -5,10 +5,6 @@
   width: 50%;
 }
 
-.padding-image {
-  padding-left: 35%;
-}
-
 .padding-feilds {
   padding-left: 37%;
 }
@@ -22,4 +18,11 @@
   color: orangered;
   font-family: Arial, serif;
   font-size: 9pt;
+}
+
+.padding-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
 }
