--- a/src/app/user-options/view-requests/view-requests.component.scss
+++ b/src/app/user-options/view-requests/view-requests.component.scss
@@ -11,3 +11,10 @@
   height: 50%;
   overflow: auto;
 }
+
+.padding-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
+}
