--- a/src/app/user-options/view-requests/view-requests.component.html
+++ b/src/app/user-options/view-requests/view-requests.component.html
@@ -37,7 +37,7 @@
             <td mat-cell *matCellDef="let request">
                 <button mat-button 
                   color="warn"
-                  (click)="cancelRequest(request.ID)">
+                  (click)="callConfrim(request.ID)">
                   <mat-icon svgIcon="cancel"></mat-icon>
                   Cancel
                 </button>
