--- a/src/app/user-options/help/help.component.html
+++ b/src/app/user-options/help/help.component.html
@@ -4,10 +4,20 @@
   <img class="padding-image" src="assets/images/user-options/help/help.png" alt="HELP">
   <hr>
   <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    <input type="text" placeholder="Filter"
+            aria-label="Number"
+            matInput
+            [formControl]="autoComplete"
+            [matAutocomplete]="auto"
+            focus-me="false">
+    <mat-autocomplete #auto="matAutocomplete">
+      <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+        {{option}}
+      </mat-option>
+    </mat-autocomplete>
   </mat-form-field>
   <!-- View User Info -->
-  <div *ngIf="filter == 'user' || filter === ''">
+  <div *ngIf="filterValue == 'user information' || filterValue === ''">
     <p>
       <b><u>User Information</u></b>
       <br>
@@ -15,7 +25,7 @@
     </p>
   </div>
   <!-- Update User Info -->
-  <div *ngIf="filter == 'update' || filter === ''">
+  <div *ngIf="filterValue == 'update user info' || filterValue === ''">
     <p>
       <b><u>Update User Information</u></b>
       <br>
@@ -33,7 +43,7 @@
     </p>
   </div>
   <!-- Assigned Parking -->
-  <div *ngIf="filter == 'assign' || filter === '' || filter == 'assigned'">
+  <div *ngIf="filterValue == 'assigned parking' || filterValue === '' || filterValue == 'assigned'">
     <p>
       <b><u>Assigned Parking</u></b>
       <br>
@@ -41,22 +51,43 @@
     </p>
   </div>
   <!-- Request Parking -->
-  <div *ngIf="filter == 'request' || filter === ''">
+  <div *ngIf="filterValue == 'request parking' || filterValue === ''">
     <p>
       <b><u>Request Parking</u></b>
+      <br>
       This allows you to request for a different parking area / spot within the facility.
+      <br>
+      1) First select the desired parking area.
+      <br>
+      2) Then select a parking spot.
+      <br>
+      3) Finally click the request button.
     </p>
-    <div *ngIf="filter == 'user' || filter === ''">
+  </div>
   <!-- View Requests -->
-  <div>
+  <div *ngIf="filterValue == 'view requests' || filterValue === ''">
     <p>
-
+        <b><u>View Requests</u></b>
+        <br>
+        This will display all your currently (In progress) requests.
+        <br>
+        A request can be canceled by:
+        <br>
+        1) Clicking the Cancel button, a confirmation box will appear asking if you want to cancel.
+        <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;*Clicking NO will not cancel the request.
+        <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;*Clicking YES will cancel the request, and the request will be removed.
     </p>
   </div>
   <!-- Infringments -->
-  <div *ngIf="filter == 'user' || filter === '' || filter == 'user information'">
+  <div *ngIf="filterValue == 'infringements' || filterValue === ''">
     <p>
-
+      <b><u>Infringements</u></b>
+      <br>
+      This will display all infringements/reports that are against you,
+      <br>
+      and that still have to be paid to the facility.
     </p>
   </div>
   <p>
