--- a/src/app/user-options/forgot-password/forgot-password.component.scss
+++ b/src/app/user-options/forgot-password/forgot-password.component.scss
@@ -3,7 +3,14 @@
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  text-align:center;
+}
+
+.padding-feilds {
+  padding-left: 37%;
+}
+
+.padding-buttons {
+  padding-left: 36%;
 }
 
 .requirement {
