--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -22,7 +22,7 @@
         </mat-form-field>
       </mat-dialog-content>
       <div>
-          <a href="/forgot-password" class="forgot">FORGOT PASSWORD</a>
+          <a href="./forgot-password" class="forgot">FORGOT PASSWORD</a>
       </div>
   </div>
   <br>
