--- a/src/app/user-options/view-assigned-parking/view-assigned-parking.component.html
+++ b/src/app/user-options/view-assigned-parking/view-assigned-parking.component.html
@@ -17,7 +17,7 @@
       </mat-list-item>
     </mat-list>
   </div>
-  <div *ngIf="!ParkingName">
+  <div *ngIf="!ParkingName && !resp">
     NO CURRENTLY ASSIGNED PARKING
   </div>
   <div *ngIf="ParkingName && !markerEmpty" class="padding-map">
@@ -26,6 +26,9 @@
   <div *ngIf="markerEmpty">
     <p>No map data to display.</p>
   </div>
+  <div align="center" *ngIf="resp">
+    <mat-spinner></mat-spinner>
+</div>
   <hr>
 </div>
   
